--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     def vb_delegate_version = "1.5.6"
     implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$vb_delegate_version"
 
+    def nav_version = "2.5.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
 
     testImplementation 'junit:junit:4.13.2'
