--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.education">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Education"
         tools:targetApi="31">
+
+        <service
+            android:name=".presentation.service.MyForegroundService"
+            android:enabled="true"
+            android:exported="false" />
+
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
