--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ android {
         viewBinding true
     }
 }
-
 dependencies {
     def core_ktx_version = "1.8.0"
     implementation "androidx.core:core-ktx:$core_ktx_version"
@@ -47,8 +46,10 @@ dependencies {
     def constraint_layout_version = "2.1.4"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
-    def android_material_version = "1.6.1"
+    def android_material_version = "1.7.0"
     implementation "com.google.android.material:material:$android_material_version"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
 
     def fragment_version = "1.5.2"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
@@ -71,6 +72,6 @@ dependencies {
 
     // Testing section
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
